force-app/main/default/objects/Patient__c/fields/Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Information__c</fullName>
    <label>Доп. информация</label>
    <length>100</length>
    <type>Text</type>
</CustomField>