force-app/main/default/objects/Patient__c/fields/Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth__c</fullName>
    <label>Дата рождения</label>
    <type>Date</type>
</CustomField>