force-app/main/default/objects/Patient__c/fields/Job__c.field-meta.xml
<CustomField>
    <fullName>Job__c</fullName>
    <label>Место работы</label>
    <length>100</length>
    <type>Text</type>
</CustomField>