force-app/main/default/objects/Patient__c/fields/Mobile__c.field-meta.xml
<CustomField>
    <fullName>Mobile__c</fullName>
    <label>Телефон</label>
    <type>Phone</type>
</CustomField>