force-app/main/default/objects/Patient__c/fields/Patronymic__c.field-meta.xml
<CustomField>
    <fullName>Patronymic__c</fullName>
    <label>Отчество</label>
    <length>255</length>
    <type>Text</type>
</CustomField>