force-app/main/default/objects/Patient__c/fields/Second_Name__c.field-meta.xml
<CustomField>
    <fullName>Second_Name__c</fullName>
    <label>Фамилия</label>
    <length>50</length>
    <type>Text</type>
</CustomField>