force-app/main/default/objects/Patient__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Second_Name__c</columns>
    <columns>First_Name__c</columns>
    <columns>Patronymic__c</columns>
    <columns>Date_of_Birth__c</columns>
    <columns>Mobile__c</columns>
    <columns>Address__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>